@@ -2,6 +2,7 @@ trunk
 =====
 * bugfix for assigning default data name when default data does not exist
 * bugfix for sharing/unsharing data to a three-level hierarchy
+* bugfix for error reporting in bad matrix access, uncalculated std. errors, and poor omxAllint thresholds
 
 Release 0.2.9-1147
 ==================
